--- a/less/custom.less
+++ b/less/custom.less
@@ -39,9 +39,30 @@
     padding: 5px 10px;
 }
 
+#app-body-container {
+    .leftContent {
+        border-right: 2px solid #E6E6E6;
+        padding-top: 10px;
+    }
+}
+
 #repo-list-container {
+    margin-top: -20px;
+
     .repoName {
         color: #6FB4B1;
         font-size: 1.5em;
+    }
+
+    .fa-github {
+        font-size: 2em;
+    }
+
+    .repoDetail {
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
+        color: #666666;
+        font-size: 1em;
     }
 }
