--- a/css/custom.css
+++ b/css/custom.css
@@ -42,6 +42,9 @@
   border-right: 2px solid #E6E6E6;
   padding-top: 10px;
 }
+#app-body-container .autocomplete-content {
+  position: absolute;
+}
 #repo-list-container {
   margin-top: -20px;
 }
