--- a/less/custom.less
+++ b/less/custom.less
@@ -44,6 +44,9 @@
         border-right: 2px solid #E6E6E6;
         padding-top: 10px;
     }
+    .autocomplete-content {
+      position: absolute;
+    }
 }
 
 #repo-list-container {
