--- a/css/custom.css
+++ b/css/custom.css
@@ -42,6 +42,24 @@
   border-right: 2px solid #E6E6E6;
   padding-top: 10px;
 }
+#app-body-container .rightContent {
+  padding-top: 10px;
+}
+#app-body-container .rightContent > div {
+  padding: 5px;
+  background: #e6e6e6;
+  border-radius: 5px;
+}
+#app-body-container .rightContent > div > div:first-child {
+  border: 1px solid #e6e6e6;
+  border-radius: 5px;
+  padding: 5px;
+  background: white;
+  margin-bottom: 5px;
+}
+#app-body-container .rightContent .startRange {
+  padding-bottom: 20px;
+}
 #app-body-container .autocomplete-content {
   position: absolute;
 }
