--- a/less/custom.less
+++ b/less/custom.less
@@ -49,7 +49,11 @@
     .rightContent {
         padding-top: 10px;
 
-        > div {
+        #slide-out {
+            padding: 10px;
+        }
+
+        .row.center-align {
             padding: 5px;
             background: #e6e6e6;
             border-radius: 5px;
@@ -64,7 +68,7 @@
         }
 
         .startRange {
-            padding-bottom: 20px;
+            padding-bottom: 20px !important;
         }
     }
 
@@ -90,5 +94,4 @@
         font-size: 1em;
     }
 }
-
 @import "mediaQuery.less";
