--- a/less/custom.less
+++ b/less/custom.less
@@ -80,9 +80,14 @@
 #repo-list-container {
     margin-top: -20px;
 
+    .card-panel {
+        cursor: pointer;
+    }
+
     .repoName {
         color: #6FB4B1;
         font-size: 1.5em;
+        margin-left: 5px;
     }
 
     .fa-github {
@@ -92,6 +97,7 @@
     .repoDetail {
         color: #666666;
         font-size: 1em;
+        margin-left: 5px;
     }
 }
 @import "mediaQuery.less";
