- mention author and remove footer

--- a/less/custom.less
+++ b/less/custom.less
@@ -41,6 +41,8 @@
 }
 
 #app-body-container {
+    min-height: 100%;
+
     .leftContent {
         border-right: 2px solid #E6E6E6;
         padding-top: 10px;
