--- a/css/custom.css
+++ b/css/custom.css
@@ -38,6 +38,9 @@
   border-radius: 4px;
   padding: 5px 10px;
 }
+#app-body-container {
+  min-height: 100%;
+}
 #app-body-container .leftContent {
   border-right: 2px solid #E6E6E6;
   padding-top: 10px;
