--- a/less/custom.less
+++ b/less/custom.less
@@ -54,8 +54,28 @@
         .card {
             margin: 10px;
 
+            .removeUser {
+                display: none;
+                position: absolute;
+                top: 0;
+                right: 0;
+                z-index: 10;
+                background: rgba(200,200,200,0.6);
+                width: 100%;
+                height: 100%;
+                text-align: right;
+                padding: 10px;
+                cursor: pointer;
+            }
+
             .card-content {
                 width: 100%;
+            }
+
+            &:hover {
+                .removeUser {
+                    display: inline-block;
+                }
             }
         }
     }
