- delete user works

--- a/less/custom.less
+++ b/less/custom.less
@@ -65,7 +65,10 @@
                 height: 100%;
                 text-align: right;
                 padding: 10px;
-                cursor: pointer;
+
+                i {
+                    cursor: pointer;
+                }
             }
 
             .card-content {
