--- a/css/custom.css
+++ b/css/custom.css
@@ -62,6 +62,8 @@
   height: 100%;
   text-align: right;
   padding: 10px;
+}
+#user-list-container #user-list .card .removeUser i {
   cursor: pointer;
 }
 #user-list-container #user-list .card .card-content {
